tests/baselines/reference/commentsAfterCaseClauses3(strict=true).errors.txt
commentsAfterCaseClauses3.ts(1,22): error TS7006: Parameter 'level' implicitly has an 'any' type.


==== commentsAfterCaseClauses3.ts (1 errors) ====
    function getSecurity(level) {
                         ~~~~~
!!! error TS7006: Parameter 'level' implicitly has an 'any' type.
        switch(level){
            case 0: /*Zero*/
            case 1: /*One*/ 
            case 2: /*two*/
                // Leading comments
                return "Hi";
            case 3: /*three*/
            case 4: /*four*/
                return "hello";
            case 5: /*five*/
            default:  /*six*/
                return "world";
        }
        
    }